--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
+.vscode/
+.DS_Store
 tools/*
-src/a
 bin/*
+build/*
 out/*
+sample/*
 out.txt
 *.svg
 *.in
 *.out
-tmp.txt
 vis.html
-.DS_Store
-.vscode/
 vis.png
-seed.txt
-sample/
