--- a/cmd/compile-server/Dockerfile.golang
+++ b/cmd/compile-server/Dockerfile.golang
@@ -1,6 +1,6 @@
 FROM golang:1.21 as serverbuild
 WORKDIR /app
-RUN git clone -b makebuilds https://github.com/fmhr/fj.git /app/fj \
+RUN git clone -b make-builds https://github.com/fmhr/fj.git /app/fj \
     && cd fj/cmd/compile-server \
     && go build -o /app/server 
 
