--- a/cmd/compile-server/Dockerfile
+++ b/cmd/compile-server/Dockerfile
@@ -13,6 +13,7 @@ RUN go install github.com/fmorenovr/gods/...
 RUN go install gonum.org/v1/gonum/...
 RUN go install github.com/liyue201/gostl/...
 RUN go install golang.org/x/exp/...
+# ここまで
 
 COPY --from=serverbuild /app/server /work
 
