--- a/cmd/worker/Dockerfile
+++ b/cmd/worker/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.21 as workerbuild
 WORKDIR /work
-RUN git clone -b upgrade  https://github.com/fmhr/fj.git \
+RUN git clone -b make-builds  https://github.com/fmhr/fj.git \
     cd fj/cmd/worker \
     && CGO_ENABLED go build -o /work/worker
 
