--- a/cmd/compile-server/Dockerfile
+++ b/cmd/compile-server/Dockerfile
@@ -9,13 +9,14 @@ FROM golang:1.20 as gocompile
 WORKDIR /work
 ENV PATH="/opt/go/bin:${PATH}"
 
-RUN go install github.com/fmorenovr/gods/...
-RUN go install gonum.org/v1/gonum/...
-RUN go install github.com/liyue201/gostl/...
-RUN go install golang.org/x/exp/...
+#RUN go install github.com/fmorenovr/gods/...
+#RUN go install gonum.org/v1/gonum/...
+#RUN go install github.com/liyue201/gostl/...
+#RUN go install golang.org/x/exp/...
 # ここまで
 
 COPY --from=serverbuild /app/server /work
+RUN chmod +x /work/server
 
 EXPOSE 8080
 CMD ["/work/server"]
