--- a/cmd/worker/Dockerfile
+++ b/cmd/worker/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /work
 
 # IMPORTANT: 問題によってテスターは異なるので、適宜URLを変更すること
 # ------------------------------------------------------------------
-RUN wget -q https://img.atcoder.jp/ahc024/AU5KcDyn.zip -O tools.zip 
-# ------------------------------------------------------------------
-RUN unzip tools.zip \
+# RUN wget -q https://img.atcoder.jp/ahc024/AU5KcDyn.zip -O tools.zip 
+RUN wget -q https://img.atcoder.jp/ahc023/asprocon10_5XtyY7PgVPtBANvV.zip -O tools.zip \
+    && unzip tools.zip \
     && (cd tools && cargo build --release --quiet)
 
 
@@ -16,7 +16,6 @@ WORKDIR /work
 RUN git clone -b make-builds  https://github.com/fmhr/fj.git \
     && cd fj/cmd/worker \
     && CGO_ENABLED=0 go build -o /work/worker
-
 
 
 
