--- a/cmd/compiler/Dockerfile
+++ b/cmd/compiler/Dockerfile
@@ -13,17 +13,25 @@ WORKDIR /app/fj/cmd/compiler
 RUN go build -o /app/server
 
 
+
+#
 # ここからターゲットのコンパイル環境をつくる
-FROM golang:1.21.5 as gocompile
+#FROM golang:1.21.5 as gocompile
 
-WORKDIR /work
+#WORKDIR /work
 
-ENV PATH="/opt/go/bin:${PATH}"
+#ENV PATH="/opt/go/bin:${PATH}"
 
 #RUN go install github.com/fmorenovr/gods/...
 #RUN go install gonum.org/v1/gonum/...
 #RUN go install github.com/liyue201/gostl/...
 #RUN go install golang.org/x/exp/...
+
+
+FROM ubuntu:22.10
+WORKDIR /work
+
+RUN sh installGolang.sh
 
 COPY --from=serverbuild /app/server /work
 
