--- a/cmd/worker/Dockerfile
+++ b/cmd/worker/Dockerfile
@@ -1,17 +1,10 @@
-
-# 2. 公式ツールのビルド
 FROM rust:buster as toolsbuilder
 WORKDIR /work
 
-# 問題によってテスターは異なるので、適宜URLを変更すること
-# ローカルのtoolsディレクトリをマウントする場合は、以下のようにする
-# COPY ./tools /work/tools
-# ------------------------------------------------------------------
-# RUN wget -q https://img.atcoder.jp/ahc024/AU5KcDyn.zip -O tools.zip 
-# RUN wget -q https://img.atcoder.jp/ahc023/asprocon10_5XtyY7PgVPtBANvV.zip -O tools.zip \
-# AHC027
+# 直接ダウンロードするとき　例)AHC027
 #RUN wget -q https://img.atcoder.jp/ahc027/aPdjCUIZ_v2.zip -O tools.zip \
 #    && unzip tools.zip 
+
 COPY ./tools /work/tools
 RUN (cd tools && cargo build --release --quiet)
 
