--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-Language = 'C++12'
+Language = 'Go'
 Cmd = './a.out'
 Args = []
-Reactive = true
+Reactive = false
 TesterPath = 'tools/target/release/tester'
 VisPath = 'tools/target/release/vis'
 GenPath = 'tools/target/release/gen'
@@ -10,8 +10,8 @@ OutfilePath = 'out/'
 Jobs = 4
 Cloud = false
 CompilerURL = ''
-Source = 'Main.cpp'
-CompileCmd = 'g++-12 -std=gnu++2b -O2 -DONLINE_JUDGE -DATCODER -Wall -Wextra -mtune=native -march=native -fconstexpr-depth=2147483647 -fconstexpr-loop-limit=2147483647 -fconstexpr-ops-limit=2147483647 -I/opt/ac-library -I/opt/boost/gcc/include -L/opt/boost/gcc/lib -o a.out Main.cpp -lgmpxx -lgmp -I/usr/include/eigen3'
+Source = 'main.go'
+CompileCmd = 'go build -o a.out main.go'
 Binary = 'a.out'
 tmpBinary = ''
 Bucket = ''
