Dockerfileの変更: 必要な言語のコメントアウトをはずし、Javaのインストールを追加

--- a/cmd/compiler/script/Dockerfile
+++ b/cmd/compiler/script/Dockerfile
@@ -23,10 +23,14 @@ RUN apt-get update && apt-get install -y \
     gzip
 
 COPY . /work
-# RUN sh install_go.sh || echo "failed to install go"
-# ENV PATH $PATH:/opt/go/bin
+###################################################################
+# 必要な言語のコメントアウトをはずしてね
+###################################################################
+RUN sh install_go.sh || echo "failed to install go"
+ENV PATH $PATH:/opt/go/bin
 # RUN sh install_cpp20.sh || echo "failed to install cpp20"
-RUN sh install_cs.sh || echo "failed to install cs"
+# RUN sh install_cs.sh || echo "failed to install cs"
+RUN sh install_java.sh || echo "failed to install java"
 
 COPY --from=serverbuild /app/server /work
 
