Dockerfileの変更: Rustのインストールスクリプトを実行するように修正

--- a/cmd/compiler/script/Dockerfile
+++ b/cmd/compiler/script/Dockerfile
@@ -30,8 +30,8 @@ COPY . /work
 # ENV PATH $PATH:/opt/go/bin
 # RUN sh install_cpp20.sh 
 # RUN sh install_cs.sh
-# RUN sh install_java.sh 
-RUN ./install_rust.sh
+# RUN sh install_java.sh
+RUN sh install_rust.sh
 
 
 COPY --from=serverbuild /app/server /work
