--- a/cmd/compiler/script/Dockerfile
+++ b/cmd/compiler/script/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.21 as serverbuild
+FROM golang:1.25 as serverbuild
 
 WORKDIR /app
 
@@ -7,7 +7,6 @@ RUN git clone https://github.com/fmhr/fj.git \
     && go mod tidy
 
 WORKDIR /app/fj/cmd/compiler
-
 RUN go build -o /app/server
 
 
@@ -20,24 +19,22 @@ RUN apt-get update && apt-get install -y \
     apt-utils \
     wget \
     unzip \
-    gzip
+    gzip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY . /work
 ###################################################################
 # 不要な言語のインストールを避けるため、コメントアウトしています。
 ###################################################################
-# RUN sh install_go.sh 
-# ENV PATH $PATH:/opt/go/bin
+RUN sh install_go.sh 
+ENV PATH $PATH:/opt/go/bin
 # RUN sh install_cpp20.sh 
 # RUN sh install_cs.sh
 # RUN sh install_java.sh
 RUN sh install_rust.sh
 
-
 COPY --from=serverbuild /app/server /work
-
 RUN chmod +x /work/server
-
 EXPOSE $PORT
-
 CMD ["/work/server"]
